[gd_scene load_steps=4 format=3 uid="uid://drmfx8g3gfgl4"]

[ext_resource type="Script" uid="uid://cf5up6dlwskfk" path="res://scripts/inventory_manager.gd" id="1_qw0r6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gg8by"]
bg_color = Color(0.6, 0.6, 0.6, 0.745098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qw0r6"]
bg_color = Color(0.347817, 0.347817, 0.347817, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qw0r6")

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -200.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_gg8by")

[node name="slot_panel_1" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -175.0
offset_right = -123.0
offset_bottom = -25.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qw0r6")

[node name="item_texture" type="TextureRect" parent="slot_panel_1"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 145.0
offset_bottom = 145.0
expand_mode = 1

[node name="slot_panel_2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -189.0
offset_right = 91.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qw0r6")

[node name="item_texture" type="TextureRect" parent="slot_panel_2"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 170.0
offset_bottom = 170.0
expand_mode = 1

[node name="slot_panel_3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 126.0
offset_top = -175.0
offset_right = 276.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qw0r6")

[node name="item_texture" type="TextureRect" parent="slot_panel_3"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 145.0
offset_bottom = 145.0
expand_mode = 1

[node name="select_left_btn" type="Button" parent="."]
layout_mode = 0
offset_left = -424.0
offset_top = -150.0
offset_right = -297.0
offset_bottom = -56.0
text = "Q"

[node name="select_right_btn" type="Button" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = -150.0
offset_right = 423.0
offset_bottom = -56.0
text = "E"
